# fixed-point-decimal-math

./: Cargo.toml  README.md
src/: lib.rs
