[package]
name = "fixed-point-decimal-math"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "fixed_point_decimal_math"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anchor-lang = { version = "0.26.0" }
solana-program = "~1.14.19"